fix: website reservation page uiux
